Se agrega Index. y nuevos aspectos
index.html se cambia el nombre a calculadora.html y se crea un nuevo index.html, se crea nueva paguina

--- a/index.html
+++ b/index.html
@@ -1,58 +1,65 @@
 <!doctype html>
 <html lang="en">
-    <head>
-    <title>calculadora</title>
+  <head>
+    <title>Sumaria</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
-    </head>
-        <body>
+    <link rel="icon" sizes="any" href="adress/icono.png">
+  </head>
+  <body>
+      
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="index.html">
+            <img src="adress/icono.png" width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy">
+           <span class="menu__titulo">Sumaria</span>
+          </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link " href="calculadora.html">Calculadora</a>
+            <a class="nav-link" href="#">Contanto</a>
+            <a class="nav-link" href="#">Sobre Sumaria</a>
+          </div>
+        </div>
+      </nav>
 
 
+<div>
+<h1 class="titulo__titulo"><img class="titulo__img" src="adress/icono.png" alt="suma"> <span class="titulo__rojito">S</span>umaria</h1>
+</div>
 
-
-
-<div class="calculadora">
-    <div class="Top__Bar">Calculadora</div>
-    <div class="main_resultado">
-    <div class="screen__top" id="screen__operation">45*89</div>
-    <div class="screen__content" id="screen__resukt">5460</div>
+<div class="card mb-3 card__position" style="max-width: 540px;">
+    <div class="row no-gutters">
+      <div class="col-md-4">
+        <img src="adress/calculadora.jpg" class="card-img" alt="calculadora">
+      </div>
+      <div class="col-md-8">
+        <div class="card-body">
+          <h5 class="card-title">Calculadora</h5>
+          <p class="card-text">Ahora vas a poder hacer tus cuentas de una manera mas facil, con la calculadora de Sumaria se te va a ser facil Sumar, Restar, Multiplicar y Dividir, y sacar porcentajes. </p>
+          <p class="card-text"></p>
+          <button type="button" class="btn btn-primary btn-lg card__button"><a href="calculadora.html" class="card__link"> Calculadora de sumaria </a>
+        </button>
+        </div>
+      </div>
     </div>
-    <div class="main_teclas" id="main__teclas">
-<button class="Tecla-C">C</button>
-<button class="Tecla-masmenos">+/-</button>
-<button class="Tecla-Porcentaje">%</button>
-<button class="Tecla-Dividir">/</button>
-<button class="Tecla-7">7</button>
-<button class="Tecla-8">8</button>
-<button class="Tecla-9">9</button>
-<button class="Tecla-Multiplicacion">*</button>
-<button class="Tecla-4">4</button>
-<button class="Tecla-5">5</button>
-<button class="Tecla-6">6</button>
-<button class="Tecla-Resta">-</button>
-<button class="Tecla-1">1</button>
-<button class="Tecla-2">2</button>
-<button class="Tecla-3">3</button>
-<button class="Tecla-Suma">+</button>
-<button class="Tecla-0">00</button>
-<button class="Tecla-V">0</button>
-<button class="Tecla-,">,</button>
-<button class="Tecla-Igual">=</button>
-</div>
-</div>
+  </div>
+
+  <footer class="fotter__copy"></footer>
 
 
 
 
 
 
-
-
-    <script src="js/jquery-3.5.1.min.js" ></script>
-    <script src="js/popper.min.js" ></script>
-    <script src="js/bootstrap.min.js    " ></script>
+      
+    <script src="js/jquery-3.5.1.min.js"></script>
+    <script src="js/popper.min.js"></script>
     <script src="js/java.js"></script>
-        </body>
+  </body>
 </html>
