se mejora paguina de inicia
se le agrega card

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   </head>
   <body>
       
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="index.html">
             <img src="adress/icono.png" width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy">
-           <span class="menu__titulo">Sumaria</span>
+           <span class="menu__titulo"><span class="titulo__rojito">S</span>umaria</span>
           </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -51,6 +51,7 @@
   </div>
 
   <footer class="fotter__copy"></footer>
+  
 
 
 
