se cambia color y fuente
se cambia color de fondo de la calculadora y se la fuente

--- a/calculadora.html
+++ b/calculadora.html
@@ -7,12 +7,14 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" sizes="any" href="adress/icono.png">
+    <link href="https://fonts.googleapis.com/css2?family=Finger+Paint&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Chelsea+Market&display=swap" rel="stylesheet">
     </head>
         <body>
 
           <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <a class="navbar-brand" href="index.html">
-                <img src="adress/icono.png" width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy">
+                <img src="adress/icono.png" width="30" height="30" class="d-inline-block align-top" alt="Sumaria" loading="lazy">
                <span class="menu__titulo"><span class="titulo__rojito">S</span>umaria</span>
               </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -20,8 +22,8 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav">
-                <a class="nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
-                <a class="nav-link " href="calculadora.html">Calculadora</a>
+                <a class="nav-link" href="index.html">Home </a>
+                <a class="nav-link active" href="calculadora.html">Calculadora<span class="sr-only">(current)</span></a>
                 <a class="nav-link" href="#">Contanto</a>
                 <a class="nav-link" href="#">Sobre Sumaria</a>
               </div>
@@ -71,6 +73,9 @@
 
 </article>
 
+<footer class="footer_copy">
+
+</footer>
 
 
     <script src="js/jquery-3.5.1.min.js" ></script>
