se corrigue codigo
se le agrega copyright y se corrigue codigo de css

--- a/index.html
+++ b/index.html
@@ -33,48 +33,48 @@
     </div>
   </nav>
 
-<div>
-  <h1 class="titulo__titulo"><img class="titulo__img" src="adress/icono.png" alt="suma"> <span
-      class="titulo__rojito">S</span>umaria</h1>
-</div>
+  <div>
+    <h1 class="titulo__titulo"><img class="titulo__img" src="adress/icono.png" alt="suma"> <span
+        class="titulo__rojito">S</span>umaria</h1>
+  </div>
 
 
 
-<article>
-  
-  <div class="container-fluid">
-    <div class="row">
+  <article>
 
-      <div class="card col-md-3 col-sm-6 card__position-1" style="width: 18rem;">
-        <img src="adress/calculadora.jpg" class="card-img-top center__img" alt="calculadora">
-        <div class="card-body">
-          <h5 class="card-title"><span class="titulo__rojito">C</span>alculadora</h5>
-          <p class="card-text">Vas a poder realizar tus cuentas de una forma sensilla y rapida, con la calculadora de
-            Sumaria vas a poder Sumar, Restar, Multiplicar y Dividir.</p>
-          <a href="calculadora.html" class="btn btn-primary card__link">Sumaria Calculadora</a>
+    <div class="container-fluid">
+      <div class="row">
+
+        <div class="card col-md-3 col-sm-6 card__position-1" style="width: 18rem;">
+          <img src="adress/calculadora.jpg" class="card-img-top center__img" alt="calculadora">
+          <div class="card-body">
+            <h5 class="card-title"><span class="titulo__rojito">C</span>alculadora</h5>
+            <p class="card-text">Vas a poder realizar tus cuentas de una forma sensilla y rapida, con la calculadora de
+              Sumaria vas a poder Sumar, Restar, Multiplicar y Dividir.</p>
+            <a href="calculadora.html" class="btn btn-primary card__link">Sumaria Calculadora</a>
+          </div>
+        </div>
+
+
+
+        <div class="card col-md-3 col-sm-6 card__position-2" style="width: 18rem;">
+          <img src="adress/proximamente.jpg" class="card-img-top center__img" alt="proximamente">
+          <div class="card-body">
+            <h5 class="card-title"><span class="titulo__rojito">P</span>roximamente</h5>
+            <p class="card-text">Vas a poder a poder ver nuevo material, estamos trabajando para poder hacer mas grande
+              el
+              sitio.</p>
+            <a href="#" class="btn btn-primary card__link disabled">Proximamente</a>
+          </div>
         </div>
       </div>
-
-
-
-      <div class="card col-md-3 col-sm-6 card__position-2" style="width: 18rem;">
-        <img src="adress/proximamente.jpg" class="card-img-top center__img" alt="proximamente">
-        <div class="card-body">
-          <h5 class="card-title"><span class="titulo__rojito">P</span>roximamente</h5>
-          <p class="card-text">Vas a poder a poder ver nuevo material, estamos trabajando para poder hacer mas grande el
-            sitio.</p>
-          <a href="#" class="btn btn-primary card__link disabled">Proximamente</a>
-        </div>
-      </div>
-
-
-
-
     </div>
-    </div>
+  </article>
 
-  
-</article>
+  <footer class="fotter__copy">
+    <hr class="footer__linea">
+    <div > &copy; Echo por Luis Dick. Todos los derechos recervados</div>
+  </footer>
 
 
 
